--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Recordman</display-name>
   <welcome-file-list>
-    <welcome-file>/resources/pages/login.jsp</welcome-file>
+    <welcome-file>resources/pages/login.jsp</welcome-file>
   </welcome-file-list>
   <filter>
     <filter-name>EncodingFilter</filter-name>
@@ -10,6 +10,15 @@
   </filter>
   <filter-mapping>
     <filter-name>EncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>codeman.filter.loginValidateFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
  
