--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,6 +34,9 @@
       <listener-class>
           org.springframework.web.context.ContextLoaderListener
       </listener-class>
+      <listener-class>
+          recordman.ContextListener
+      </listener-class>
   </listener>
   <context-param>
       <param-name>contextConfigLocation</param-name>
