修改日志路径为tomcat的logs目录 配置文件修改或保存出错后增加自动回滚功能

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,14 +1,26 @@
-log4j.rootLogger=info,stdconsole,stdout
+log4j.rootLogger=info,stdconsole,stderr,stdout
 
 log4j.appender.stdconsole=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdconsole.Threshold=error
 log4j.appender.stdconsole.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdconsole.layout.ConversionPattern=%p:thread: %t  location: %l %n %d{yyyy-MM-dd HH:mm:ss.SSS}:  %m%n
 
-log4j.appender.stdout=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.stdout.Threshold=warn
+log4j.appender.stderr=org.apache.log4j.RollingFileAppender
+log4j.appender.stderr.Threshold=error
+log4j.appender.stderr.Append=true
+log4j.appender.stderr.File=${catalina.base}/logs/recordman_error.log
+log4j.appender.stderr.MaxFileSize=1024KB
+log4j.appender.stderr.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.stderr.MaxBackupIndex=100
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern=%p:thread: %t  location: %l %n %d{yyyy-MM-dd HH:mm:ss.SSS}:  %m%n %n
+
+log4j.appender.stdout=org.apache.log4j.RollingFileAppender
+log4j.appender.stdout.Threshold=info
 log4j.appender.stdout.Append=true
-log4j.appender.stdout.File=D:/web_log/System_Log.txt
+log4j.appender.stdout.File=${catalina.base}/logs/recordman_info.log
+log4j.appender.stdout.MaxFileSize=1024KB
 log4j.appender.stdout.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.stdout.MaxBackupIndex=20
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%p:thread: %t  location: %l %n %d{yyyy-MM-dd HH:mm:ss.SSS}:  %m%n %n
