细节修改 1.去除工程人员登陆接口、运行人员和检修人员改为运行模式和检修模式 2.将运行状态展示整合到故障录波页面

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,9 +34,7 @@
       <listener-class>
           org.springframework.web.context.ContextLoaderListener
       </listener-class>
-      <listener-class>
-          recordman.ContextListener
-      </listener-class>
+      <listener-class>recordman.ContextListener</listener-class>
   </listener>
   <context-param>
       <param-name>contextConfigLocation</param-name>
